# services-demonstration

./: LICENSE  README.md  environment.yml  launch-demo.sh  pyproject.toml
.github/workflows/: python-package.yml
docs/: README.md  services.md
preparation/: 0_make-asoh-training-set.ipynb  1_check-state-estimates.ipynb  README.md
roviweb/: api.py  cli.py  db.py  online.py  prognosis.py  schemas.py  utils.py
roviweb/api/: __init__.py  db.py  online.py  prognosis.py  state.py
roviweb/api/templates/: home.html  layout.html  status.html
tests/: conftest.py  test_cli.py  test_estimator.py  test_prognosis.py  test_upload.py  test_views.py
tests/files/: example-estimator.py  initial-asoh.json
tests/files/diagnosis/: example-estimator.py  initial-asoh.json
tests/files/prognosis/: camp_forecast_model.pkl  example-forecaster.py  pca_model.pkl  predict-method.ipynb
