[project]
name = "roviweb"
version = "0.0.1"
description = "Demonstration web service for battery health prognosis"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["batteries", "science", "data science"]
authors = [
    {name = "Logan Ward", email = "lward@anl.gov"},
]
dependencies = [
    "matplotlib",
    "battery-data-toolkit",
    "fastapi",
    "msgpack",
    "python-multipart",
    "moirae@git+https://github.com/ROVI-org/auto-soh.git",
    "httpx-ws",
    "numpy<2",  # Vignesh's models are sklearn <1.3, which was before NumPy 2
    "scikit-learn<1.3",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["roviweb*"]

[project.optional-dependencies]
test = [
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-mock"
]

[project.urls]
repository = "https://github.com/rovi-org/services-demonstration"

[project.scripts]
rovicli = "roviweb.cli:main"
